--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+</head>
 <body>
     
     <div class="w-[100vw] h-[100vh] flex flex-col items-center justify-center bg-[#344151] gap-10">
@@ -30,7 +31,7 @@
 
         </div>
     </div>
-    <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></scrip>
     <script src="./index.js"></script>
 </body>
 </html>
